@@ -1,3 +1,7 @@
+*2006/10/12 Yuichi Nakamura
+ Improved performance of audit2spdl
+ Guess fullpath in chroot environment
+
 *2006/10/4 Yuichi Nakamura
 Add allowkey to SPDL for FC6
 
